--- a/no_show_texts.qmd
+++ b/no_show_texts.qmd
@@ -4,7 +4,7 @@
 <center>(This SOP has scripts for various texts to send to participants if they miss a session. Staff should take 15-30 minutes after the time of the call before sending a no-show text)</center>
 
 #### No-Show One-Week Check-In (Google Voice Text)
-```
+```html
 Hello!  
 
 I am sorry we were unable to connect for your one-week check-in. Would you be able to take a 5 minute call sometime today ({INSERT DATE}) or tomorrow ({INSERT DATE})? I am available {INSERT YOUR HOURS} on both days. Please reply with the date and time that would work best for you. Thank you for your understanding and I look forward to connecting with you soon!
@@ -13,7 +13,7 @@ I am sorry we were unable to connect for your one-week check-in. Would you be ab
 STAR Study Team
 ```
 #### No-Show Consent Onboarding (Google Voice)
-```
+```html
 Hello!  
 
 This is {YOUR NAME} from the UW-Madison STAR Study. We had an onboarding call scheduled for this time, and I was unfortunately unable to reach you. I will be free for the next 30 minutes if you are able to call back. If you are still interested in participating but need to reschedule, you can reschedule up to 3 times using this link:  
