--- a/other_after_enrollment_texts.qmd
+++ b/other_after_enrollment_texts.qmd
@@ -4,7 +4,7 @@
 
 ## To Get Response from People Failed to Completed the Check-In  
 
-```
+```html
 Hello,    
 Our records indicate that you have not yet completed your one-week follow-up call with us. If it would be easier, we can ask you the questions over text. You will still receive $10 for completion if you respond with your answers.
 
@@ -24,7 +24,7 @@ STAR Study Team
 
 ## Participant got a new phone
 
-```
+```html
 Hello, We got your message about a new phone. This link should automatically start the download: https://star.achess.wisc.edu/apps/android/latest.apk. From there you can login in, please just make sure you accept all of the permission requests. I will submit a note so that you receive credit for any missed tasks. Please let me know if you have any issues!
 
 Thank you,
@@ -33,7 +33,7 @@ STAR Study Team
 
 ## Participant has not been responsive for 2+ weeks
 
-```
+```html
 Hello, We have been trying to get in touch with you because you have hit the withdrawal criteria for {INSERT NAME OF MISSING DATA} and need to discuss whether this study is still a good fit for you. Please give us a call or reply to this message with a date and time that would be for a brief call. Your response is very important to us.
 
 Thank you,
@@ -42,7 +42,7 @@ STAR Study Team
 
 ## Participant screened ineligible but now eligible
 
-```
+```html
 Thank you for submitting a screening survey for the STAR Study at the University of Wisconsin - Madison! After reviewing your responses, we've determined that you are now eligible to participate. If you are still interested in participating, you can use this link to schedule a consent/onboarding session. At the session, you will hear more about the study and decide whether you want to participate. The session will take about 30 minutes and if you successfully complete the session, you will receive $20 in compensation. Thank you again and I hope you have a great rest of your day!
 
 Thank you,  
@@ -51,7 +51,7 @@ STAR Study Team
 
 ## Participant Reports Missing Tasks Due To App Issues
 
-```
+```html
 I'm so sorry you had to deal with that! That sounds very frustrating. It looks like you were able to get into the app but I can send along instructions if you would like to have them on hand. Did you miss any tasks because you were locked out? If so, please let me know the dates so that I can credit you those tasks. In the future, if the app is giving you trouble you do not have to spend more than 5 minutes troubleshooting. We will give you credit for any tasks you missed because of this issue.
 
 Thank you and I hope you have a great rest of your day!
@@ -63,7 +63,7 @@ STAR Study Team
 
 ## Participant reports app affecting their battery
 
-```
+```html
 Hello,
 I'm sorry you're experiencing this issue! We just got word back for our developer team. Unfortunately, the app does need to be running in the background for it to function. That notice sits in the notification bar and can't simply be swiped to dismiss. However that notification can be disabled this way: 
 
@@ -99,15 +99,15 @@ STAR Study Team
 
 ## Participant reports new app issue
 
-```
-Thank you for letting us know about this, that sounds very frustrating. <Ask Questions to Troubleshoot Issue> Did you miss any tasks because you were locked out? If so, please let me know the dates so that I can credit you those tasks. In the future, if the app is giving you trouble you do not have to spend more than 5 minutes troubleshooting. We will give you credit for any tasks you miss because of an app issue. Thank you and I hope you have a great rest of your day!
+```html
+Thank you for letting us know about this, that sounds very frustrating. {Ask Questions to Troubleshoot Issue} Did you miss any tasks because you were locked out? If so, please let me know the dates so that I can credit you those tasks. In the future, if the app is giving you trouble you do not have to spend more than 5 minutes troubleshooting. We will give you credit for any tasks you miss because of an app issue. Thank you and I hope you have a great rest of your day!
 
 STAR Study Team
 ```
 
 ## Troubleshooting follow-up message
 
-```
+```html
 Thank you so much for the information you provided during our call today. Your daily task tracker helped reveal an issue that was previously not on our radar. I reported these issues to our developer team and I will make sure that the payment you receive is consistent with the task completion details you gave me today. In the meantime, please continue to complete the tasks to the best of your ability and know that your contributions have been extremely valuable to our study. We appreciate your participation!
 
 STAR Study Team
@@ -117,7 +117,7 @@ STAR Study Team
 
 ## Participant has an internet phone number
 
-```
+```html
 Hello,  
 You recently completed an online survey indicating you were interested in the STAR Research Study at the University of Wisconsin-Madison. We see you have scheduled a call session with us on {INSERT DATE AND TIME}. Unfortunately, our computer system indicates that your phone carrier is not compatible with our study app and we will have to cancel the session at this time.
 
@@ -129,7 +129,7 @@ STAR Study Team
 
 ## Participant is using chrome
 
-```
+```html
 Hello,  
 Our computer has detected that you have been using STAR through Google Chrome rather than on the app. To remain in the study, participants MUST be able to use the app to complete all tasks, otherwise, we are unable to collect data.
 
@@ -140,7 +140,7 @@ STAR Study Staff
 ```
 
 ## Final Call text   
-```
+```html
 Hello,  
 Our records indicate you have completed 100% of the study duration! This means it is time to schedule your final call. 
 
