--- a/reminder_messages.qmd
+++ b/reminder_messages.qmd
@@ -10,12 +10,16 @@ STAR staff will send consent/onboarding session reminders via text the day prior
 
 Please include the time in the participant's Time Zone **first**, followed by Central time IF DIFFERENT. For example: 1pm Eastern time/ 12pm Central time. 
 
+When you are sending reminders that aren't for tomorrow - for example, if you are sending a Monday visit reminder, on a Friday - PLEASE be sure to change "tomorrow" to the actual day of the visit!
+
+
 ### How to get time zones:
 
 To get time zones for a Consent/Onboard session:
 
 Copy and paste the following code in the Console pane of RStudio; then hit enter to run:
-```
+```r
+
 library(tidyverse)
 library(here)
 
@@ -43,8 +47,8 @@ To verify the time zone of a current participant (1-week or final visit):
 
 Copy & paste the following code in the Console pane of RStudio (hit enter to run):
 
-```
-enroll <- tidy_qualtrics("enroll", token_qualtrics)#load enrolled
+```r
+enroll <- tidy_qualtrics("enroll", token_qualtrics) #load enrolled
 ```
 Then click the "enroll" dataframe at the top-right hand side and search for the subid. You will see their city/state/zip which you can use to google their time zone.
 
@@ -52,33 +56,39 @@ Then click the "enroll" dataframe at the top-right hand side and search for the 
 
 ## Reminder for Consent/Onboarding (Google Voice text)
 
-*Hello,*\
-*This is a reminder that you have a consent/onboarding session scheduled for \[TIME\] TIME ZONE (TIME ZONE ABBREVIATION)/\[TIME\] CENTRAL TIME (CST) Tomorrow (DATE).*
+```html
+Hello,  
+This is a reminder that you have a consent/onboarding session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).*
 
-*The call will come from a number beginning with a 608 area code. It should take around 30 minutes and you will receive \$20 if you successfully complete the session.*
+The call will come from a number beginning with a 608 area code. It should take around 30 minutes and you will receive $20 if you successfully complete the session.*
 
-*Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please use the following link: <https://doodle.com/bp/starstudy1/consent-session>* *We thank you for your time and look forward to speaking with you.*
+Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please use the following link: <https://doodle.com/bp/starstudy1/consent-session>* *We thank you for your time and look forward to speaking with you.
 
-*\[Your name,\]*\
-*STAR Study Research Staff*
-
+{YOUR NAME},
+STAR Study Team
+```
 
 ## Reminder for One-Week Check-In (Google Voice text) 
 
-*Hello!* *This is a reminder that you have your STAR Study one-week check-in at \[TIME\] TIME ZONE (TIME ZONE ABBREVIATION)/\[TIME\] CENTRAL TIME (CST), tomorrow, DAY, MONTH DATE. The call should take 5-10 minutes and you'll be compensated \$10 for attending. The call will also come from a 608 area code. Thank you and I look forward to speaking with you soon!*
+```html
+Hello!
+This is a reminder that you have your STAR Study one-week check-in at {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST), tomorrow, DATE, MONTH DATE. The call should take 5-10 minutes and you'll be compensated $10 for attending. The call will also come from a 608 area code. Thank you and I look forward to speaking with you soon!
 
-*STAR Study Team*
-
+{YOUR NAME},
+STAR Study Team
+```
 
 ## Reminder for Final Visit (Google Voice text) 
 
-*Hello,*\
-*This is a reminder that you have a final session scheduled for \[TIME\] TIME ZONE (TIME ZONE ABBREVIATION)/\[TIME\] CENTRAL TIME (CST) Tomorrow (DATE).*
+```html
+Hello,
+This is a reminder that you have a final session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).*
 
-*The call will come from a number beginning with a 608 area code. The call should take less than 30 minutes and you will receive \$10 if you successfully complete the session. During the session, our team member will assist you to delete the app or change the permissions to stop data sharing.*
+The call will come from a number beginning with a 608 area code. The call should take less than 30 minutes and you will receive $10 if you successfully complete the session. During the session, our team member will assist you to delete the app or change the permissions to stop data sharing.
 
-*Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please let us know by replying to this email*
-*We thank you for your time and look forward to speaking with you.*
+Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please let us know by replying to this email*
+We thank you for your time and look forward to speaking with you.
 
-*\[Your name,\]*\
-*STAR Study Research Staff*
+{YOUR NAME},
+STAR Study Team
+```
