--- a/faq_consent_onboarding.qmd
+++ b/faq_consent_onboarding.qmd
@@ -16,6 +16,10 @@ A: Yes! But please be aware that we will be discussing sensitive topics. If you 
 
 A: They would need to complete their own screener and call session with us.
 
+**Q: "Someone I know is already on study, so I already know what it's about. Do we still need to go over all this stuff?"**
+
+A: I'm afraid so. While I know some of this information may come across redundant, we are required to read the consent in its entirety to everyone interested in participating."
+
 **Q: "What do you mean by an ongoing cell phone plan?"**
 
 A: By "ongoing cell phone plan", we are talking about a cell phone plan that you or someone else pays monthly to the same cell service provider.
