--- a/ra_tasks.qmd
+++ b/ra_tasks.qmd
@@ -6,20 +6,17 @@ When your assigned tasks are complete, you can help by performing other tasks!
 
 ## Running Participant Sessions
 * [Consent/Onboard SOP](consent_onboarding_script.qmd){target="_blank"}
- + [Consent/Onboard FAQ](faq_consent_onboarding.qmd){target="_blank"}
- + [STAR FAQ](faq_arc_star_website.qmd){target="_blank"}
+  * [Consent/Onboard FAQ](faq_consent_onboarding.qmd){target="_blank"}
+  * [STAR FAQ](faq_arc_star_website.qmd){target="_blank"}
+  * [STAR Tasks FAQ](faq_tasks.qmd){target="_blank"}
 * [One-week Visit SOP](one_week_check_in.qmd){target="_blank"}
 * If participants no-shows, [send them a message](no_show_texts.qmd){target="_blank"} to remind them of the call and remind them they only have **3** chances to reschedule 
-
-
 
 ## Send reminders for tomorrow's visits
 * Send [reminder messages](reminder_messages.qmd){target="_blank"} 
   * We send reminders for consent/onboarding, one-week, and final visits. Be careful you are sending the right message for the the visit type!
   * Reminders for Monday are sent on Friday
 * Check Google Voice messages for answers to the reminders
-
-
 
 ## Participant calendar tasks
 * Check upcoming visits on Google Calendar for irregularities (duplicates, missing names, missing or incomplete phone numbers)
@@ -29,7 +26,6 @@ When your assigned tasks are complete, you can help by performing other tasks!
   + Paste-in their number and enter captcha  
   + If you see an internet number, send the participant a message to confirm their phone number  
 
-
 ## Participant compliance and data checks
 * Check training video completion
 * Check intake survey completion
@@ -37,15 +33,13 @@ When your assigned tasks are complete, you can help by performing other tasks!
   * Send [compliance messages](compliance_messages.qmd){target="_blank"}
 * Check compliance via [data_report_by_subid](check_data_by_subid.qmd){target="_blank"}
   * Check that we have non-zero numbers of GPS, voice, sms
-  * If there are zero GPS points, check all_tokens dataframe to see if they use Chrome
-
+  * If there are zero GPS points, check `all_tokens` dataframe to see if they use Chrome
 
 ## Mail
 * Check mailbox on 2nd floor 
 * For returned W9 forms, [see SOP here](payment_w9_entry.qmd){target="_blank"}
 * For returned participant envelopes: 
   * Note returned envelopes in participant threads, prepare [replacement mailings](focus_blue_mailer_setup.qmd#sec-lost-card){target="_blank"}
-
 
 ### Mail out new participant payment/onboard materials
 * [See SOP here](focus_blue_mailer_setup.qmd){target="_blank"}
@@ -54,6 +48,7 @@ When your assigned tasks are complete, you can help by performing other tasks!
 
 
 ## Participant communication
+* [Respond to any participant messages](check_participant_messages.qmd){target="_blank"}
 * Look for participant questions that need answering:
  * Check [email box](study_email.qmd){target="_blank"}
  * Check [Google Voice](google_voice.qmd){target="_blank"} messages
@@ -68,7 +63,7 @@ When your assigned tasks are complete, you can help by performing other tasks!
   * Change the original contact number from the subid "XXXX" to "XXXX - OLD" 
   * Add a new contact (name is the subid) and send a message confirming we have their new number, thank them for letting us know.
 
-* [Respond to any participant messages](check_participant_messages.qmd){target="_blank"}
+
 
 
 ## Recruitment
