--- a/reminder_messages.qmd
+++ b/reminder_messages.qmd
@@ -58,11 +58,13 @@ Then click the "enroll" dataframe at the top-right hand side and search for the 
 
 ```html
 Hello,  
-This is a reminder that you have a consent/onboarding session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).*
+This is a reminder that you have a consent/onboarding session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).
 
-The call will come from a number beginning with a 608 area code. It should take around 30 minutes and you will receive $20 if you successfully complete the session.*
+The call will come from a number beginning with a 608 area code. It should take around 30 minutes and you will receive $20 if you successfully complete the session.
 
-Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please use the following link: <https://doodle.com/bp/starstudy1/consent-session>* *We thank you for your time and look forward to speaking with you.
+Please text 'C' to CONFIRM this appointment. If you need to reschedule for any reason, please use the following link: https://doodle.com/bp/starstudy1/consent-session 
+
+We thank you for your time and look forward to speaking with you.
 
 {YOUR NAME},
 STAR Study Team
@@ -82,11 +84,12 @@ STAR Study Team
 
 ```html
 Hello,
-This is a reminder that you have a final session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).*
+This is a reminder that you have a final session scheduled for {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST) Tomorrow (DATE).
 
 The call will come from a number beginning with a 608 area code. The call should take less than 30 minutes and you will receive $10 if you successfully complete the session. During the session, our team member will assist you to delete the app or change the permissions to stop data sharing.
 
-Please text 'C' to CONFIRM this appointment.* *If you need to reschedule for any reason, please let us know by replying to this email*
+Please text 'C' to CONFIRM this appointment. If you need to reschedule for any reason, please let us know by replying to this email. 
+
 We thank you for your time and look forward to speaking with you.
 
 {YOUR NAME},
