--- a/compliance_messages.qmd
+++ b/compliance_messages.qmd
@@ -2,57 +2,96 @@
 
 <center>(This SOP contains warning messages to send when conducting compliance checks.)</center>
 
- 
+
 
 **Green Warning (Missed 8 daily updates and no data for past 4 days)**
+```html
 Subject: Checking in
+
 Hello,
+
 Our system has notified us that we haven't received any data or updates from you for several days. As a reminder, participants are expected to complete all monthly updates and at least 6 daily updates per week.
+
 I wanted to check-in and see if everything is alright as well as offer some strategies to help remember to complete study tasks. 
+
 Some strategies we have found that help with completing surveys are:
-Set reminder notifications using the STAR app or your phone
-Complete surveys right when you wake up or before bed to get in the habit of completing them
-Message us if there is a way we can better support you in completing tasks
+* Set reminder notifications using the STAR app or your phone
+* Complete surveys right when you wake up or before bed to get in the habit of completing them
+
 If you are experiencing any problems with the app or have any questions, please let us know.
+
 Thank you so much for your participation!
 STAR Study Team
+```
 
 **Yellow Warning (Missed > 8 daily updates)**
+
+```html
 Subject: Missing daily updates
+
 Hello,
+
 Our system has notified us that you have missed X daily updates since the start of your current study month (XX/XX/23).
+
 As a reminder, participants are expected to complete at least 6 daily updates per week. Missing 10 daily updates per month puts you at risk for being withdrawn from the study, so it is very important that you complete all daily updates before the end of your study month (XX/XX/23).
+
 I wanted to check-in and see if everything is alright. Are you having any issues with the STAR App or completing any tasks? 
+
 If you are not having trouble there is no need to reply to this message.
+
 Thank you for your participation!
 STAR Study Team
+```
 
 **Red Warning (Missed >8 daily updates for the second period in a row)**
+```html
 Subject:  Missing daily updates
+
 Hello,
+
 Our system has notified us that you have missed X daily updates since the start of your current study month (XX/XX/23).
+
 As a reminder, participants are required to complete 6 daily updates per week. You MUST not miss more than 10 daily updates before the end of your study month (XX/XX/23) and if you continue to miss more, we may have to discontinue your participation.
+
 Please let us know if you are having any issues with the STAR App or completing any tasks and we can work together to solve the problem.
+
 If you are not having trouble there is no need to reply to this message.
+
 Thank you for your participation!
 STAR Study Team
+```
 
 **Monthly, gentle (still able to complete monthly update on time)**
+```html
 Subject: Monthly update is ready
+
 Hello,
 Our system has notified us that you have not yet completed your monthly update. 
+
 As a reminder, you must complete the monthly update before the end of your study month (XX/XX/23).
+
 If you are having any issues with the STAR App or completing any tasks please let us know.
+
 If you are not having trouble, or have completed your monthly update in the last 24 hours, there is no need to reply to this message.
+
 Thank you for your participation!
 STAR Study Team
+```
 
 **Monthly, urgent (missed a monthly update)**
+```html
 Subject: Missed monthly update
+
 Hello,
+
 Our system has notified us that you missed your monthly update. 
+
 As a reminder, all participants are required to complete every monthly update as part of their participation. If you miss 2 monthly updates in a row, we may have to discontinue your participation. 
+
 If you are you having any issues with the STAR App or completing any tasks please let us know.
+
 If you are not having trouble, or have completed your monthly update in the last 24 hours, there is no need to reply to this message.
+
 Thank you for your participation!
 STAR Study Team
+```
