--- a/one_week_check_in.qmd
+++ b/one_week_check_in.qmd
@@ -73,7 +73,7 @@ During the one week check in, you will:
 *Great and how about the daily updates? Any issues with completing the daily update surveys?*
 
 **(Pause for response)**\
-*Do you feel like you are able to make the daily update and daily video check-in a part of you daily routine?*
+*Do you feel like you are able to make the daily update a part of you daily routine?*
 
 ::: {.callout-caution collapse="true"}
 ## If No
